# Development

./: .env  .gitignore  ARCHITECTURE.md  Cargo.toml  Cargo_complete.toml  INSTALL.md  INSTALLATION_GUIDE.md  INSTALLSTEPS.md  Makefile  README.md  README_COMPLETE.md  build-binary.sh  build-final-binary.sh  build-installer.sh  build-real-installer.sh  build-release-corrected.sh  build.sh  create-final-gui-installer.sh  create-final-installer.sh  create-gui-installer.sh  create-installer-binary.sh  create-real-installer.sh  create-standalone-installer.sh  fix_all_simulations.sh  nexus-installer-complete.run  nexus-installer-corrected.run  nexus-installer-v2.1.0.run  nexus-installer.run  package.json  rebuild-installer.sh  test_firmware.py  test_ui_firmware_integration.py
documentation/: guidelines.md
installer/: install-nexus-rpi5-ssd.sh  install-nexus-rust-rpi5.sh  install_nexus_complete.sh  preflight_check.sh  quick_fix.sh  test_installation.sh
libraries/: README.md
migrations/: 001_initial_schema.sql  002_vibration_sensors.sql  003_refrigerant_diagnostics.sql  004_alarms_and_logs.sql
projects/building-automation-controller/: Architecture.md  README.md  backend-server.js  create-installation-media.py  next.config.js  package.json  start-web-server.sh
projects/building-automation-controller-rpi5-ssd/: Architecture.md  README-64BIT.md  README-RPI5-SSD.md  README.md  install-gui.py  package.json
projects/building-automation-controller-rpi5-ssd/app/: layout.tsx
projects/building-automation-controller-rpi5-ssd/components/: bms-integration.tsx  logic-engine.tsx  maintenance-mode.tsx  metrics-visualization.tsx  protocol-manager.tsx
projects/building-automation-controller-rpi5-ssd/config/: protocols.toml  rpi5-optimizations.toml
projects/building-automation-controller-rpi5-ssd/installer/: install-automata-nexus-rpi5-smart.py  install-automata-nexus-rpi5.py  install-automata-nexus.py  uninstall-automata-nexus.py
projects/building-automation-controller-rpi5-ssd/scripts/: benchmark-rpi5.sh  megabas_interface.py  setup-rust-aarch64.sh  setup-ssd.sh  upgrade-existing-ssd.sh
projects/building-automation-controller-rpi5-ssd/src/: app.js
projects/building-automation-controller-rpi5-ssd/src-tauri/: Cargo.toml  tauri.conf.json
projects/building-automation-controller-rpi5-ssd/src-tauri/src/: logic_engine.rs  main.rs  metrics_db.rs  vibration_sensor.rs
projects/building-automation-controller-rpi5-ssd/src-tauri/src/protocols/: bacnet_ip.rs  bacnet_mstp.rs  mod.rs  modbus_rtu.rs  modbus_tcp.rs  rs485_manager.rs
projects/building-automation-controller-rpi5-ssd/src-tauri/src/refrigerant_diagnostics/: diagnostics.rs  mod.rs  p499_transducer.rs
projects/building-automation-controller/.github/workflows/: build-release.yml
projects/building-automation-controller/app/: page.tsx
projects/building-automation-controller/components/: bms-integration.tsx  firmware-manager.tsx  logic-engine.tsx  maintenance-mode.tsx  metrics-visualization.tsx
projects/building-automation-controller/components/ui/: calendar.tsx  select.tsx
projects/building-automation-controller/installer/: install-automata-nexus.py  uninstall-automata-nexus.py
projects/building-automation-controller/lib/: api-client.ts
projects/building-automation-controller/scripts/: create-release.sh  deploy-to-pi.sh  install-web-services.sh
projects/building-automation-controller/services/: automata-nexus-backend.service  automata-nexus-frontend.service
projects/building-automation-controller/src/: index.html
projects/building-automation-controller/src-tauri/: Cargo.toml  tauri.conf.json
projects/building-automation-controller/src-tauri/.cargo/: config.toml
projects/building-automation-controller/src-tauri/src/: data_export.rs  hardware.rs  logic_engine.rs  main.rs  metrics_db.rs
projects/building-automation-controller/src-tauri/src/refrigerant_diagnostics/: diagnostics.rs  mod.rs
projects/building-automation-v0/: main.js  package.json  setup-rpi.sh  setup.sh
projects/building-automation-v0/app/: page.tsx
projects/building-automation-v0/components/: logic-engine.tsx
projects/building-automation-v0/scripts/: sensor_interface.py
projects/building-automation-v0/src/: App.tsx
projects/building-automation-v0/src-tauri/: Cargo.toml  tauri.conf.json
projects/building-automation-v0/src-tauri/src/: main.rs
projects/node-red-flows/: README.md
projects/refrigerant-diagnostic-monitor/: README.md
projects/refrigerant-diagnostic-monitor/scripts/: deploy-to-pi.sh  sm_4_20ma.py
projects/refrigerant-diagnostic-monitor/src/: index.html
projects/refrigerant-diagnostic-monitor/src-tauri/: Cargo.toml  tauri.conf.json
projects/refrigerant-diagnostic-monitor/src-tauri/src/: main.rs  p499_transducer.rs  refrigerants.rs
projects/wtvb01-vibration-monitor/: README.md
projects/wtvb01-vibration-monitor/scripts/: test-speed.sh
projects/wtvb01-vibration-monitor/src/: index.html
projects/wtvb01-vibration-monitor/src-tauri/: Cargo.toml  tauri.conf.json
release/: nexus-installer-gui-v3.0.0.run  nexus-installer-v3.0.0.run
scripts/: deploy-to-pi.sh  install-service.sh
src/: admin.rs  alarms.rs  api.rs  audit.rs  auth.rs  boards.rs  database_retention.rs  firmware_interface.py  firmware_manager.rs  main.rs  protocols.rs  sensors.rs  serial_manager.rs  state.rs  system_commands.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  wtvb01_sensor.rs
src/ui/: admin_panel_complete.rs  bms_complete.rs  board_config_complete.rs  complete_ui_integration.rs  dashboard.rs  database_complete.rs  firmware_complete.rs  io_control_complete.rs  live_monitor_complete.rs  logic_engine_complete.rs  login.rs  processing_complete.rs  refrigerant_complete.rs  vibration_complete.rs
tools/: README.md
web/static/: app.css
