[package]
name = "nexus-controller"
version = "2.0.0"
edition = "2021"
authors = ["Andrew Jewell Sr."]
description = "Automata Nexus AI Building Automation Controller for Raspberry Pi 5"
license = "Commercial"

[dependencies]
# Native UI - Using egui
eframe = { version = "0.24", features = ["persistence"] }
egui = "0.24"
egui-phosphor = "0.3"  # Icons
egui_extras = { version = "0.24", features = ["all_loaders"] }
egui_plot = "0.24"  # For charts

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"

# Database - WITHOUT offline mode to avoid compilation issues
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hardware Communication
serialport = "4.3"
tokio-modbus = "0.7"
modbus = "1.1"

# Raspberry Pi Hardware
rppal = { version = "0.17", features = ["hal"] }
linux-embedded-hal = "0.4"
embedded-hal = "1.0"
i2cdev = "0.6"

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# State Management
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1.19"

# Utilities
base64 = "0.21"
hostname = "0.4"
dirs = "5.0"
bytes = "1"
futures = "0.3"

# Email
lettre = "0.11"
mime = "0.3"

# System Monitoring
sysinfo = "0.30"
systemstat = "0.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM64 specific optimizations for Raspberry Pi 5
neon = "0.10"

[features]
default = ["native-ui"]
native-ui = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-arm64]
inherits = "release"
target-cpu = "cortex-a76"  # Raspberry Pi 5 CPU