[package]
name = "wtvb01-vibration-monitor"
version = "1.0.0"
description = "Professional WTVB01-485 Vibration Monitoring System for Raspberry Pi"
authors = ["AutomataNexus AI"]
license = "Commercial"
repository = "https://github.com/yourusername/Development"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "wtvb01-vibration-monitor"
path = "src/main.rs"