[package]
name = "building-automation-controller"
version = "1.0.0"
description = "Building Automation System Controller"
authors = ["AutomataControls"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "shell-execute", "shell-sidecar", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# Specific optimizations for ARM64
[profile.release.package."*"]
opt-level = 2


[[bin]]
name = "building-automation-controller"
path = "src/main.rs"