[package]
name = "refrigerant-diagnostic-monitor"
version = "1.0.0"
description = "Multi-Refrigerant HVAC/Refrigeration Diagnostic System"
authors = ["AutomataControls"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "refrigerant-diagnostic-monitor"
path = "src/main.rs"