[package]
name = "wtvb01-vibration-monitor"
version = "1.0.0"
description = "WTVB01-485 Vibration Monitoring System"
authors = ["AutomataControls"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true